SUBDIRS = dleyna-core dleyna-connector-dbus dleyna-server dleyna-renderer

MAINTAINERCLEANFILES =	Makefile.in		\
			aclocal.m4		\
			configure		\
			config.h.in		\
			config.h.in~		\
			build-aux/depcomp	\
			build-aux/compile	\
			build-aux/missing	\
			build-aux/install-sh

maintainer-clean-local:
	rm -rf build-aux
